# mstscex

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: common.rdpt  test.rdpt
mstscex/: __init__.py  __main__.py  bufferedlineiterator.py  functions.py  rdpbuilder.py  rdpsettings.py  rdptemplate.py  util.py
