[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mstscex"
description = "Connect to computers via templated RDP files"
keywords = ["Remote Desktop", "mstsc", "rdp"]
version = "0.0.1"
dependencies = [
    "jinja2 >= 3.1.3",
    "cryptography >= 42.0.5"
]

[project.scripts]
mstscex = "mstscex.__main__:main"

[project.gui-scripts]
mstscexw = "mstscex.__main__:main"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
multi_line_output = 3
force_sort_within_sections = true
combine_as_imports = true
